--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-counter-input": "^2.0.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
